fix: code analysis suggestions